T-7896 Theme: fixed issue with white space under tabs
Reviewed-on: http://review.dev.totaralms.com/620
Tested-by: Totara Hudson <totara-hudson@catalyst.net.nz>

--- a/theme/totara/styles_totara.css
+++ b/theme/totara/styles_totara.css
@@ -1167,6 +1167,16 @@ ul.tabrow1 li a:visited {
   border-bottom: 1px solid #DDDDDD;
 }
 
+/* Tab row height */
+.tabtree.numrows_1{
+  height:30px;
+}
+.tabtree.numrows_2{
+  height:50px;
+}
+.tabtree.numrows_3{
+  height:65px;
+}
 
 /******************************************
  * Frontpage
